Chapter04/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  tls:
    - hosts:
        - keycloak.${MINIKUBE_IP_ADDR}.nip.io
  rules:
    - host: keycloak.${MINIKUBE_IP_ADDR}.nip.io
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
